- fixed gulp file so changes to example js files trigger reload - imported listbox styles into _select.scss - added `Ready`custom events to all components - changed Select attribute LIST_HIDDEN to LIST_VISIBLE - replaced 'template' with component name when copying `_template.scss` for new components #66

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1,8 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,700,800');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&family=Work+Sans:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 // REPEATING ELEMENTS
 * {
   box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
 }
 
 a {
@@ -84,6 +85,12 @@ h3 {
   font-size: 2.1rem;
   line-height: 1.4;
 }
+
+
+hr {
+  margin: $buffer-s 0;
+}
+
 
 kbd {
   background-color: map-get($pot-grey, 1);
